--- a/vistas/gestionAdministrador.ejs
+++ b/vistas/gestionAdministrador.ejs
@@ -10,6 +10,7 @@
       <li><a href="/administrador/gestion-medicos">Gestionar Medicos</a></li>
       <li><a href="/administrador/gestion-especialidades">Gestionar Especialidades</a></li>
       <li><a href="/administrador/gestion-seguros">Gestionar Seguros</a></li>
+      <li><a href="/administrador/gestion-medicamentos">Gestionar Medicamentos</a></li>
     </ul>
     <%- include("./parciales/fondo.ejs") %>
   </body>
