--- a/vistas/gestionPacientes.ejs
+++ b/vistas/gestionPacientes.ejs
@@ -79,8 +79,8 @@
             </td>
             <td data-name="genero" contenteditable>
               <select name="genero" id="genero">
-                <option value="Masculino" <%= paciente.genero=="Masculino" = ? "selected": "" %> >Masculino</option>
-                <option value="Femenino" <%= paciente.genero=="Femenino" = ? "selected": "" %> >Femenino</option>
+                <option value="Masculino" <%= paciente.genero=="Masculino" ? "selected": "" %> >Masculino</option>
+                <option value="Femenino" <%= paciente.genero=="Femenino" ? "selected": "" %> >Femenino</option>
               </select>|
             </td>
             <td>
