--- a/vistas/mostrarFactura.ejs
+++ b/vistas/mostrarFactura.ejs
@@ -5,7 +5,7 @@
     <%- include("./parciales/barra.ejs") %>
     <h1>Factura: <%= factura.id %></h1><br>
     <ul>
-      <li>Costo: <%= factura.costo %> </li>
+      <li>Costo: <%= factura.costos %> </li>
       <li>Servicios Prestados: <%= factura.serviciosPrestados %> </li>
       <li>Estado: <%= factura.estado %> </li>
     </ul>
