--- a/vistas/mostrarReceta.ejs
+++ b/vistas/mostrarReceta.ejs
@@ -11,7 +11,7 @@
         <th>Frecuencia</th>
         <th>Fecha Limite</th>
       </tr>
-      <% recta.Medicamentos.forEach(medicamento=>{%> 
+      <% receta.Medicamentos.forEach(medicamento=>{%> 
       <tr>
         <td><%= medicamento.nombre %></td> 
         <td><%= medicamento.Posologia.cantidad %></td> 
